test_dir/logs_backup/gcc/00.2/fopen_gcc_2016-12-01-17:06:00.txt
--------------------------------------------------------------------------------------------
seed: 20601
seed: 20601
seed: 20601
seed: 20601
seed: 20601
seed: 20601
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 29520
seed: 29520
seed: 29520
seed: 29520
seed: 29520
seed: 29520
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 18459
seed: 18459
seed: 18459
seed: 18459
seed: 18459
seed: 18459
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 22465
seed: 22465
seed: 22465
seed: 22465
seed: 22465
seed: 22465
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 2316
seed: 2316
seed: 2316
seed: 2316
seed: 2316
seed: 2316collect2: error: ld returned 1 exit status

--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 18037
seed: 18037
seed: 18037
seed: 18037
seed: 18037
seed: 18037collect2: error: ld returned 1 exit status

--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 27494
seed: 27494
seed: 27494
seed: 27494
seed: 27494
seed: 27494
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 29193
blaster.c:1:0: fatal error: can’t open /tmp/ccqvwJXW.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 29193
shared.c:1:0: fatal error: can’t open /tmp/ccqvwJXW.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 25840
blaster.c:1:0: fatal error: can’t open /tmp/ccrcWpG2.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 25840
shared.c:1:0: fatal error: can’t open /tmp/ccrcWpG2.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 1476
seed: 1476
seed: 1476
seed: 1476
seed: 1476
seed: 1476collect2: error: ld returned 1 exit status

--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 14328
seed: 14328
seed: 14328
seed: 14328
seed: 14328
seed: 14328collect2: error: ld returned 1 exit status

--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 18024
seed: 18024
seed: 18024
seed: 18024
seed: 18024
seed: 18024
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 11827
blaster.c:1:0: fatal error: can’t open /tmp/ccI7FzBk.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 11827
shared.c:1:0: fatal error: can’t open /tmp/ccI7FzBk.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 24889
seed: 24889
seed: 24889
seed: 24889
seed: 24889
seed: 24889
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 9755
seed: 9755
seed: 9755
seed: 9755
seed: 9755
seed: 9755collect2: error: ld returned 1 exit status

--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 21429
blaster.c:1:0: fatal error: can’t open /tmp/ccKIwCCp.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 21429
shared.c:1:0: fatal error: can’t open /tmp/ccKIwCCp.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 12301
seed: 12301
seed: 12301
seed: 12301
seed: 12301
seed: 12301
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 756
seed: 756
seed: 756
seed: 756
seed: 756
seed: 756
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 14340
blaster.c:1:0: fatal error: can’t open /tmp/ccLIH9nF.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 14340
shared.c:1:0: fatal error: can’t open /tmp/ccLIH9nF.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 12208
seed: 12208
seed: 12208
seed: 12208
seed: 12208
seed: 12208
--------------------------------------------------------------------------------------------
